# doc-mgmt

./: CODEOWNERS  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: config.py  container.py  log_config.py  main.py  run.py
app/api/: logging_route.py
app/api_client/: base_api_client.py  exception.py  gotenberg_api_client.py
app/auth/: __init__.py  exception.py
app/base/: components.py  constants.py  exception.py  models.py  repository.py  schema.py
app/doc_generation/: enum.py  exception.py  repository.py  schema.py
app/esign/: auth.py  client.py  enum.py  exception.py
app/file_storage/: exception.py  service.py
app/health_check/: enum.py  schema.py  service.py
app/new_relic/: __init__.py
deployment/scripts/: vClusterConfig.sh
k8s/helm/: Chart.yaml  dev-values.yaml  prod-values.yaml  stage-values.yaml  uat-values.yaml
minio/data/: footer.html  invoice.html  template_1.docx  template_2.docx  template_3.docx  template_4.docx
pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.stage.yaml  Pulumi.uat.yaml  Pulumi.yaml  helmDeploy.ts  index.ts  package-lock.json  package.json  podExecutionRole.ts  stackRefs.ts
scripts/: backend.sh  backend_local.sh  delete_db_records.py  local_db_migration.py  logger.py
tests/: conftest.py  constants.py
tests/doc_gen/: conftest.py  generate_merge_documents_test.py  generate_multiple_documents_test.py  generate_multiple_merge_documents_test.py  generate_single_test.py  generate_single_validation_test.py
tests/esign/: builders.py  clone_envelope_test.py  conftest.py  (+10 more)
(+49 files in other folders)
